objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>Account.BillingStreet+&apos; &apos;+ Account.BillingCity+&apos; &apos;+ Account.BillingState+&apos; &apos;+ Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Time_Arb_Rate__c</fullName>
        <description>Displays key Account information to the VCI.</description>
        <formula>Account.All_Time_Arb_Rate__c</formula>
        <label>All Time Arb Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_Verification_Number_of_Vehicles__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to capture the number of vehicles to be verified while on-site. Populated in advance if known but always updated by VCI on-site. When Work Order Line items are loaded from a csv, this field should be updated as well.</description>
        <inlineHelpText>Populate in advance if known - to be validated by VCI on-site. Also updated when Work Order Line Items are added/deleted with the &quot;Asset Verification&quot; Work Type</inlineHelpText>
        <label>Asset Verification - Number of Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Date_Time__c</fullName>
        <description>Stores the DateTime of the most recent time when the Status was set to &quot;Assigned&quot;. Automatically populated by a Process Builder. Used to calculate the following fields: New to Assigned (Hours); and, Assigned to Completed (Hours). Not meant to be on the page layout.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Completed_Hours__c</fullName>
        <description>Returns the number of hours spanned between the Completed Date/Time and the Assigned Date/Time. Not meant to be on the page layout.</description>
        <formula>( Completed_Date_Time__c - Assigned_Date_Time__c ) * 24</formula>
        <label>Assigned To Completed (Hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beta_Flag__c</fullName>
        <description>Beta Flag gets set to True if the Service Territory is in the specified Beta testing territory (or territories).</description>
        <formula>OR ( BEGINS( ServiceTerritory.Name, &apos;GN&apos; ),
BEGINS( ServiceTerritory.Name, &apos;OV&apos; ) )</formula>
        <inlineHelpText>Beta Flag gets set to True if the Service Territory is in the specified Beta testing territory (or territories).</inlineHelpText>
        <label>Beta Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <description>Stores the most recent DateTime when the Status was set to &quot;Completed&quot;. Automatically populated by a Process Builder. Used to calculate the following fields: Assigned to Completed (Hours); and, New to Completed (Hours). Not meant to be on the page layout.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_From_Quick_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to define whether a &apos;Work Order&apos; is created from a Quick Action or not.</description>
        <label>Created From Quick Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Without_Line_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Without Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Creation__c</fullName>
        <description>Returns the number of days spanned between when the Work Order was created and the current date/time.</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Creation</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDate_Adjustment_Engine_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DueDate Adjustment Engine Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_in_Minutes__c</fullName>
        <label>Duration in Minutes</label>
        <summarizedField>WorkOrderLineItem.DurationInMinutes</summarizedField>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Record_guid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Record guid</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Audit_Score__c</fullName>
        <description>This field reads the score from &apos;Scoring Logic Summary&apos;, but can be overwritten by a user with the permission set:  &apos;Final_Audit_score__c editable on Work Order&apos;.  All other profiles have this field set to &apos;read-only&apos;

Only viewable/editable with this permission set:  Scoring Logic Fields Visible/Edit WO/WOLI</description>
        <inlineHelpText>Only viewable/editable with this permission set:  Scoring Logic Fields Visible/Edit WO/WOLI</inlineHelpText>
        <label>Final Audit Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Required_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Required Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initiative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Number_of_Vehicles__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to capture the number of vehicles to be inspected while on-site.  Populated in advance if known and/or updated by VCI on-site (for Standard Inspection, Sirius XM, and True 360).</description>
        <inlineHelpText>Populated in advance if known - to be validated by VCI on-site.  Should be updated when Work Order Line Items are added/deleted (for Standard Inspection, Sirius XM, and True 360).</inlineHelpText>
        <label>Inspection - Number of Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspection_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection Request</label>
        <referenceTo>Inspection_Request__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_90_Days_Sold__c</fullName>
        <description>Displays key Account information to the VCI.</description>
        <formula>Account.Last_90_Days_Sold__c</formula>
        <label>Last 90 Days Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Launch_Term_Details__c</fullName>
        <description>Stores the additional information on the Account&apos;s Vehicle Launch Terms especially when it is set to Future Date/Time, Run List or Other.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide additional information on the Vehicle Launch Terms especially when it is set to Future Date/Time, Run List or Other.</inlineHelpText>
        <label>Launch Term Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_View_Display__c</fullName>
        <description>Returns the following text: &lt;Account Name&gt;: &lt;Status&gt;, &lt;Line Item Count&gt; lines, &lt;Days Since Creation&gt; days old. The text will only return the first 255 characters. Used in the Lightning Component: Work Order List App.</description>
        <formula>LEFT(
				Account.Name &amp; &quot;: &quot; &amp;
				TEXT( LineItemCount ) &amp; 
				IF( LineItemCount &lt;&gt; 1,
							&quot; lines, &quot;,
							&quot; line, &quot; ) &amp;
				TEXT( ROUND( Days_Since_Creation__c, 1 ) ) &amp; 
				IF( Days_Since_Creation__c &gt; 1,
							&quot; days old, &quot;,
							&quot; day old, &quot; ) &amp;
				Text( Priority ) &amp; &quot;, &quot; &amp;  City &amp; &quot; &quot; &amp;  State &amp; &quot; &quot; &amp;  PostalCode  ,
				255  
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List View Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_To_Assigned_Hours__c</fullName>
        <description>Returns the number of hours spanned between the Work Order&apos;s Created Date and the Assigned Date/Time. Not meant to be on the page layout.</description>
        <formula>( Assigned_Date_Time__c - CreatedDate ) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New To Assigned (Hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_To_Completed_Hours__c</fullName>
        <description>Returns the number of hours spanned between the Work Order&apos;s Completed Date/Time and the Created Date. Not meant to be on the page layout.</description>
        <formula>( Completed_Date_Time__c - CreatedDate ) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New To Completed (Hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Beta_Territory__c</fullName>
        <formula>CONTAINS( ServiceTerritory.Name, &apos;OV&apos; )</formula>
        <label>Not Beta Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Occurrence record from the revolving appointment generator that generated this work order record</description>
        <label>Occurrence</label>
        <referenceTo>Occurrence__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Revolving Term</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proactive_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proactive Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processing_Offers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processing Offers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotional_Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotional Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revolving_Appointment_Resource__c</fullName>
        <formula>Occurrence__r.Timeline__r.Service_Resource_Name__c</formula>
        <label>Revolving Appointment Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scoring_Logic_Summary__c</fullName>
        <description>This is a roll-up summary field which takes all the Work Order Line Items and takes the MAX value of &apos;scoring_logic__c&apos; and applies it to work order

Only viewable with this permission set:  Scoring Logic Fields Visible/Edit WO/WOLI</description>
        <inlineHelpText>Roll-up Summary field calculating MAX Value of Work Order Line Items.

Only viewable with this permission set:  Scoring Logic Fields Visible/Edit WO/WOLI</inlineHelpText>
        <label>Scoring Logic Summary</label>
        <summarizedField>WorkOrderLineItem.Scoring_Logic__c</summarizedField>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <description>Field added strictly for reporting, simply pulls the name of the Service Territory from the Account Level, of which the work order is based off of.</description>
        <formula>Account.Service_Territory__r.Name</formula>
        <inlineHelpText>Added formula field for report grouping purposes while Asset Verification 2.0 is being implemented.</inlineHelpText>
        <label>Request Account&apos;s Service Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Launch_Terms__c</fullName>
        <description>Used to capture launch terms as agreed to with the TM/RSD.</description>
        <inlineHelpText>Captures the launch terms as agreed to with the TM/RSD. If Future Date/Time, Run List or Other is selected, please fill in the Launch Term Details</inlineHelpText>
        <label>Vehicle Launch Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>After each vehicle</fullName>
                </value>
                <value>
                    <fullName>End of Visit/After Prescreen</fullName>
                </value>
                <value>
                    <fullName>Future Date/Time</fullName>
                </value>
                <value>
                    <fullName>Run List</fullName>
                </value>
                <value>
                    <fullName>No Reserve</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WOLI_Cannot_Complete_Status_Category_Cnt__c</fullName>
        <description>WOLI Cannot Complete Status Category Record Count</description>
        <label>WOLI Cannot Complete Status Category Cnt</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.StatusCategory</field>
            <operation>equals</operation>
            <value>Cannot Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WOLI_Completed_Record_Count__c</fullName>
        <description>Count of Completed WOLI Records</description>
        <label>WOLI Completed Record Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.StatusCategory</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WOLI_Completed_Status_Category_Cnt__c</fullName>
        <description>WOLI Completed Status Category Record Count</description>
        <label>WOLI Completed Status Category Cnt</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.StatusCategory</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WOLI_Record_Count__c</fullName>
        <description>Count of WOLI Records</description>
        <label>WOLI Record Count</label>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Order_Scheduling_Priority__c</fullName>
        <description>Converts Work Order&apos;s Priority picklist options to numeric.</description>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos;,1, &apos;Very High&apos;,2, &apos;High&apos;,3, &apos;Medium&apos;,4, &apos;Low&apos;,5, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X90_Day_Sell_Thru_Rate__c</fullName>
        <description>Displays key Account information to the VCI.</description>
        <formula>Account.X90_Day_Sell_Thru_Rate__c</formula>
        <label>90 Day Sell-Thru Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>Akron_OH_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Akron, OH</label>
        <queue>Akron_OH</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Albany_Schenectady_Troy_NY_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Albany-Schenectady-Troy, NY</label>
        <queue>Albany_Schenectady_Troy_NY</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Albuquerque_NM_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Albuquerque, NM</label>
        <queue>Albuquerque_NM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <columns>ServiceTerritory</columns>
        <columns>Name</columns>
        <columns>WorkType</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <columns>Completed_Date_Time__c</columns>
        <columns>LastModifiedBy</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WorkType</field>
            <operation>contains</operation>
            <value>Asset</value>
        </filters>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>All_Work_Orders_To_Be_Assigned</fullName>
        <columns>CreatedDate</columns>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders To Be Assigned</label>
    </listViews>
    <listViews>
        <fullName>Arizona_North_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Arizona North</label>
        <queue>Arizona_North</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arizona_South_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Arizona South</label>
        <queue>Arizona_South</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Athens_GA_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Athens, GA</label>
        <queue>Athens_GA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atlanta_South_GA_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Atlanta South, GA</label>
        <queue>Atlanta_South_GA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Austin_TX_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Austin, TX</label>
        <queue>Austin_TX</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Baltimore_MD_WorkOrder</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Asset_Verification_Number_of_Vehicles__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
        </filters>
        <label>Baltimore, MD</label>
        <queue>Baltimore_MD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Binghamton_SW_WorkOrder</fullName>
        <columns>Name</columns>
        <columns>EndDate</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <filterScope>Queue</filterScope>
        <label>Binghamton/SW</label>
        <queue>Binghamton_SW</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Birmingham_AL_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Birmingham, AL</label>
        <queue>Birmingham_AL</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Boca_Raton_FL_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Boca Raton, FL Use Fort Lauderdale</label>
        <queue>Boca_Raton_FL_Use_Fort_Lauderdale</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Boise_ID_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Boise, ID</label>
        <queue>Boise_ID</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_VCIs_LCs_from_Canceling_WO_Jobs</fullName>
        <active>false</active>
        <description>Prevent VCI&apos;s from Canceling WO Jobs.
Prevent LC&apos;s from Canceling some WO Jobs with Work Types equal to Auction Off-Lease, any CPO, Dealer or FBI...   EXCEPT Users in the Permission Set &quot;Allow Cancellation of some Work Type jobs&quot;.</description>
        <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status, &apos;Canceled&apos;) &amp;&amp; (BEGINS($Profile.Name, &apos;Vehicle&apos;) || (BEGINS($Profile.Name, &apos;Logistics&apos;) &amp;&amp; NOT($Permission.Allow_Cancellation_of_some_Work_Type_jobs) &amp;&amp; (WorkType.Name = &apos;Auction Off-lease&apos; || BEGINS(WorkType.Name , &apos;CPO&apos;) || WorkType.Name = &apos;Dealer&apos; || WorkType.Name = &apos;FBI&apos;)))</errorConditionFormula>
        <errorMessage>Status cannot be updated to Canceled for Work Types equal to Auction Off-Lease, any CPO, Dealer, or FBI.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Launch_Term_Details</fullName>
        <active>false</active>
        <description>Ensures that users fill in the Field: Launch Term Details if the Field: Vehicle Launch Terms is set to either of the following: Future Date/Time, Run List, or Other.</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(Vehicle_Launch_Terms__c, &apos;Future Date/Time&apos;),
ISPICKVAL(Vehicle_Launch_Terms__c, &apos;Run List&apos;),
ISPICKVAL(Vehicle_Launch_Terms__c, &apos;Other&apos;)
),
ISBLANK(Launch_Term_Details__c)
)</errorConditionFormula>
        <errorDisplayField>Launch_Term_Details__c</errorDisplayField>
        <errorMessage>Please fill in the Launch Terms Details for Future Date/Time, Run List or Other terms.</errorMessage>
    </validationRules>
</CustomObject>